--- a/FiveActivities/app/src/main/res/layout/activity_main.xml
+++ b/FiveActivities/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFF"
-    android:padding="10dp"
     tools:context=".MainActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="?actionBarSize"
+        android:background="@color/darkGray" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="NOTES"
+            android:textSize="35sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:layout_gravity="center" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+"
+            android:textSize="35sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:layout_gravity="end"
+            android:onClick="handleNewNoteEvent"/>
+
+    </androidx.appcompat.widget.Toolbar>
+
     <ListView
-        android:id="@+id/listView"
+        android:id="@+id/notesListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="#FFF"
-        android:dividerHeight="10dp"
-        android:footerDividersEnabled="false"
-        android:headerDividersEnabled="false" />
-</FrameLayout>
+        android:layout_marginTop="3dp"
+        android:dividerHeight="3dp"
+        android:divider="@color/darkGray"/>
+
+</LinearLayout>
