--- a/FiveActivities/app/src/main/res/drawable/gradient_background.xml
+++ b/FiveActivities/app/src/main/res/drawable/gradient_background.xml
@@ -3,9 +3,8 @@
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
             <gradient android:startColor="@color/red"
-                android:centerColor="@color/blue"
-                android:endColor="@color/cyan" />
-            <corners android:radius="60dp" />
+                android:centerColor="@color/purple"
+                android:endColor="@color/blue" />
         </shape>
     </item>
 </selector>
