--- a/FiveActivities/app/src/main/res/layout/activity_note_details.xml
+++ b/FiveActivities/app/src/main/res/layout/activity_note_details.xml
@@ -14,6 +14,15 @@
         android:minHeight="?actionBarSize"
         android:background="@color/darkGray" >
 
+        <ImageButton
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:backgroundTint="@color/darkGray"
+            android:layout_marginEnd="15dp"
+            android:scaleType="centerCrop"
+            android:onClick="handleBackEvent"
+            android:src="@drawable/back" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -23,16 +32,15 @@
             android:textStyle="bold"
             android:layout_gravity="center" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="SAVE"
-            android:textSize="20sp"
-            android:backgroundTint="@color/white"
-            android:textColor="@color/darkGray"
-            android:textStyle="bold"
+        <ImageButton
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:backgroundTint="@color/darkGray"
             android:layout_gravity="end"
-            android:onClick="handleSaveNoteEvent"/>
+            android:layout_marginEnd="15dp"
+            android:scaleType="centerCrop"
+            android:onClick="handleSaveNoteEvent"
+            android:src="@drawable/save" />
 
     </androidx.appcompat.widget.Toolbar>
 
@@ -75,6 +83,36 @@
         android:minLines="3"
         android:textColor="@color/darkGray"
         android:layout_gravity="center" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_vertical"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp">
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/shapeableImageView"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:scaleType="centerCrop"
+            android:background="@color/darkGray"
+            app:shapeAppearanceOverlay="@style/circularCorners"
+            app:srcCompat="@drawable/caution" />
+
+        <Button
+            android:id="@+id/changeIconButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SELECT ICON"
+            android:textSize="20sp"
+            android:layout_marginStart="15dp"
+            android:backgroundTint="@color/white"
+            android:textColor="@color/blue"
+            android:textStyle="bold"
+            android:onClick="handleSelectIconEvent"/>
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/deleteNoteButton"
